# WarsawPublicTransport

./: .example.env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tox.ini
Calendar/: Calendar.py  extractCalendar.py
Delays/: delays_count.py
Delays/tram_data/routes/: routes_json.json
Delays/tram_data/test/: tram20211007143535.json
Routes/: main.py  result.txt  routesProcessing.py
Schedules/: Schedule.py  main.py
Stops/: loadTimeTable.py
TimeTable/: TimeTable.py  extractTimeTableInfo.py  timetableProcessing.py
TimeTable/time_table_data/: tram_line11.json  tram_line13.json  tram_line14.json  tram_line15.json  tram_line18.json  tram_line2.json  tram_line20.json  tram_line22.json  tram_line23.json  tram_line24.json  tram_line25.json  tram_line26.json  tram_line27.json  tram_line28.json  tram_line3.json  tram_line31.json  tram_line35.json  tram_line4.json  tram_line41.json  tram_line6.json  tram_line7.json
Tram/: Tram.py  main.py  tram20211007142800 - Cut.json  tram20211007142800.json  tramProcessing.py
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: delays_processing.py  general_data_import.py  tram_gps.py
airflow/plugins/mongo_plugin/hooks/: mongo_hook.py
db/: Dockerfile
dw/: Dockerfile  run-initialization.sh
mongo/: mongo-init.js
mssql/: init.sql  ms_sql_script.sql
orchestrator/: Dockerfile  requirements.txt
orchestrator/dags/: delays_processing.py  delays_processing_dag.py  general_data_import.py  general_data_import_dag.py  json_to_postgres.py  models.py  mongo_to_postgres_dag.py  mongo_to_postgres_dag.py.bak  mongo_to_postgres_routes.py  mongo_to_postgres_stops.py  mongo_to_postgres_timetables.py  save_tram_gps.py  save_tram_gps_dag.py  settings.py  spark_test.py  sql_alchemy_classes.py  utils.py
orchestrator/dags/modules/: Stop.py
orchestrator/dags/utils/: models.py  settings.py  warsaw_api.py
orchestrator/potential_dags/: mongo_to_postgres_route_variants.py  mongo_to_postgres_stops.py
orchestrator/tests/: test_general_data_import.py  test_mongo_to_postgres_stops.py
postgresdb/: WarsawTransportState.sql  postgres_ddl.sql
processor/: Dockerfile
processor/scripts/: delays_proc.py  delays_proc2.py
processor/scripts/20221122/: tram162304.json
sparkpy/scripts/: account.csv  delays_count.py  delays_proc.py  foo.csv  test.py
tests/reports/: unittests.xml
