[tool.poetry]
name = "warsawpublictransport"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
alembic = "1.8.1"
amqp = "5.1.1"
anyio = "3.6.2"
apache-airflow = "2.4.3"
apache-airflow-providers-apache-spark = "4.0.0"
apache-airflow-providers-celery = "3.0.0"
apache-airflow-providers-common-sql = "1.2.0"
apache-airflow-providers-ftp = "3.1.0"
apache-airflow-providers-http = "4.0.0"
apache-airflow-providers-imap = "3.0.0"
apache-airflow-providers-sqlite = "3.2.1"
apispec = "3.3.2"
argcomplete = "2.0.0"
attrs = "22.1.0"
babel = "2.11.0"
billiard = "3.6.4.0"
blinker = "1.5"
brotli = "1.0.9"
cachelib = "0.9.0"
cattrs = "22.2.0"
celery = "5.2.7"
certifi = "2022.9.24"
cffi = "1.15.1"
charset-normalizer = "2.1.1"
click = "8.1.3"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.2.0"
clickclick = "20.10.2"
colorama = "0.4.6"
colorlog = "4.8.0"
commonmark = "0.9.1"
configupdater = "3.1.1"
connexion = "2.14.1"
cron-descriptor = "1.2.31"
croniter = "1.3.7"
cryptography = "36.0.2"
deprecated = "1.2.13"
dill = "0.3.1.1"
dnspython = "2.2.1"
docutils = "0.19"
email-validator = "1.3.0"
exceptiongroup = "1.0.1"
flask = "2.2.2"
flask-appbuilder = "4.1.4"
flask-babel = "2.0.0"
flask-caching = "2.0.1"
flask-jwt-extended = "4.4.4"
flask-login = "0.6.2"
flask-session = "0.4.0"
flask-sqlalchemy = "2.5.1"
flask-wtf = "1.0.1"
flower = "1.2.0"
graphviz = "0.20.1"
greenlet = "2.0.1"
gunicorn = "20.1.0"
h11 = "0.12.0"
httpcore = "0.15.0"
httpx = "0.23.0"
humanize = "4.4.0"
idna = "3.4"
importlib-metadata = "5.0.0"
importlib-resources = "5.10.0"
inflate64 = "0.3.1"
inflection = "0.5.1"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jsonschema = "4.17.0"
kombu = "5.2.4"
lazy-object-proxy = "1.8.0"
linkify-it-py = "2.0.0"
lockfile = "0.12.2"
mako = "1.2.3"
markdown = "3.4.1"
markdown-it-py = "2.1.0"
markupsafe = "2.1.1"
marshmallow = "3.18.0"
marshmallow-enum = "1.5.1"
marshmallow-oneofschema = "3.0.1"
marshmallow-sqlalchemy = "0.26.1"
mdit-py-plugins = "0.3.1"
mdurl = "0.1.2"
multivolumefile = "0.2.3"
numpy = "1.23.5"
packaging = "21.3"
pandas = "1.5.1"
pathspec = "0.9.0"
pendulum = "2.1.2"
pkgutil-resolve-name = "1.3.10"
pluggy = "1.0.0"
prison = "0.2.1"
prometheus-client = "0.15.0"
prompt-toolkit = "3.0.32"
psutil = "5.9.4"
py4j = "0.10.9.5"
py7zr = "0.20.2"
pybcj = "1.0.1"
pycparser = "2.21"
pycryptodomex = "3.15.0"
pygments = "2.13.0"
pyjwt = "2.6.0"
pymongo = "4.3.3"
pyparsing = "3.0.9"
pyppmd = "1.0.0"
pyrsistent = "0.19.2"
pyspark = "3.3.1"
python-daemon = "2.3.2"
python-dateutil = "2.8.2"
python-nvd3 = "0.15.0"
python-slugify = "6.1.2"
pytz = "2022.6"
pytzdata = "2020.1"
pyyaml = "6.0"
pyzstd = "0.15.3"
requests = "2.28.1"
requests-toolbelt = "0.10.1"
rfc3986 = "1.5.0"
rich = "12.6.0"
setproctitle = "1.3.2"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.27"
sqlalchemy-jsonfield = "1.0.0"
sqlalchemy-utils = "0.38.3"
sqlparse = "0.4.3"
swagger-ui-bundle = "0.0.9"
tabulate = "0.9.0"
tenacity = "8.1.0"
termcolor = "2.1.0"
text-unidecode = "1.3"
texttable = "1.6.5"
tornado = "6.1"
typing-extensions = "4.4.0"
uc-micro-py = "1.0.1"
unicodecsv = "0.14.1"
urllib3 = "1.26.12"
vine = "5.0.0"
wcwidth = "0.2.5"
werkzeug = "2.2.2"
wget = "3.2"
wrapt = "1.14.1"
wtforms = "3.0.1"
zipp = "3.10.0"
tox = "^3.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
