[tool.poetry]
name = "warsawpublictransport"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pandas = "^1.5.2"
pyspark = "^3.3.1"
py7zr = "^0.20.2"
pymongo = "^4.3.3"
wget = "^3.2"
wheel = "^0.38.4"
apache-airflow = {version = "2.4.3", extras = ["celery"]}

[tool.poetry.group.dev.dependencies]
tox = "^3.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
